# uniscan

./: .gitignore  Cargo.toml  LICENSE.md  README.md  justfile
.zed/: tasks.json
script/: baseline.sh  compare.sh  new.sh
src/: defs.jq  lib.rs  qualify_pptr.rs  query.rs
ui/: Cargo.toml
ui-gpui/: Cargo.toml
ui-gpui/src/: main.rs
ui-gpui/src/screens/: mod.rs  select.rs
ui/packaging/wix/: MsiPackage.wixproj  Package.en-us.wxl  Package.wxs
ui/src/: main.rs  rescan.rs  save.rs  utils.rs  widgets.rs
ui/src/widgets/: mod.rs  number_input.rs  progress_bar_integer.rs
ui/src/workers/: generic.rs  mod.rs  rescan.rs
