[package]
name = "uniscan"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mimalloc = "0.1"
anyhow = "1.0"
rabex.workspace = true
rayon = "1.11"
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["indexmap"] }
tracing = "0.1"
rabex-env.workspace = true

jaq-core = "2.2"
jaq-json = { version = "1.1", default-features = false, features = ["json", "serde_json", "serde"] }
jaq-std = { version = "2.1", default-features = false, features = ["std", "math"] }

[dev-dependencies]
rabex-env-testkit = { path = "../rabex-env/crates/rabex-env-testkit" }
tempfile = "3.27"

[lints]
workspace = true

[workspace]
package.version = "1.1.0"
package.edition = "2024"
package.license = "MIT"
members = [".", "ui"]
default-members = ["ui"]

[workspace.dependencies]
rabex-env = { git = "https://github.com/jakobhellermann/rabex-env" }
rabex = { version = "0.2", default-features = false, features = [
  "embed-tpk",
  # "serde_path_to_error", nicer errors for debugging, at a 2x speed cost
] }
[workspace.lints.clippy]
unit_arg = "allow"

[profile.release-full]
inherits = "release"
strip = "symbols"
lto = "thin"

[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
jaq-core = { git = "https://github.com/jakobhellermann/jaq", branch = "dev" }
jaq-std = { git = "https://github.com/jakobhellermann/jaq", branch = "dev" }
jaq-json = { git = "https://github.com/jakobhellermann/jaq", branch = "dev" }

# [patch."https://github.com/jakobhellermann/rabex-env"]
# rabex-env = { path = "../rabex-env" }
