[package]
name = "uniscan"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mimalloc = "0.1"
anyhow = "1.0"
rabex.workspace = true
rayon = "1.11"
tracing = "0.1"
rabex-env.workspace = true

jaq-core = "3.1"
jaq-json = { version = "2.0", default-features = false, features = ["std", "serde", "sync"] }
jaq-std = { version = "3.0", default-features = false, features = ["std", "math"] }

[dev-dependencies]
rabex-env-testkit = { path = "../rabex-env/crates/rabex-env-testkit" }
tempfile = "3.27"

[lints]
workspace = true

[workspace]
package.version = "1.1.0"
package.edition = "2024"
package.license = "MIT"
members = [".", "ui"]
default-members = ["ui"]

[workspace.dependencies]
rabex-env = { git = "https://github.com/jakobhellermann/rabex-env" }
rabex = { version = "0.2", default-features = false, features = [
  "embed-tpk",
  # "serde_path_to_error", nicer errors for debugging, at a 2x speed cost
] }
[workspace.lints.clippy]
unit_arg = "allow"

[profile.release-full]
inherits = "release"
strip = "symbols"
lto = "thin"

[profile.dev.package."*"]
opt-level = 2

# [patch."https://github.com/jakobhellermann/rabex-env"]
# rabex-env = { path = "../rabex-env" }
