[package]
name = "uniscan-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
masonry = { git = "https://github.com/jakobhellermann/xilem", branch = "accesskit-tokio" }
masonry_winit = { git = "https://github.com/jakobhellermann/xilem", branch = "accesskit-tokio" }
xilem = { git = "https://github.com/jakobhellermann/xilem", branch = "accesskit-tokio" }

rabex-env.workspace = true
rabex.workspace = true
uniscan = { version = "0.1", path = ".." }
winit = "0.30"
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
mimalloc = "0.1"
opener = "0.8.2"
rfd = { version = "0.15.4", default-features = false, features = [
    "xdg-portal",
    "tokio",
] }
