[package]
name = "uniscan-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interactively explore and export the contents of MonoBehaviours of Unity games"

[[bin]]
name = "uniscan"
path = "src/main.rs"

[dependencies]
masonry = { git = "https://github.com/jakobhellermann/xilem", branch = "accesskit-tokio" }
masonry_winit = { git = "https://github.com/jakobhellermann/xilem", branch = "accesskit-tokio" }
xilem = { git = "https://github.com/jakobhellermann/xilem", branch = "accesskit-tokio" }

rabex-env.workspace = true
rabex.workspace = true
uniscan = { path = ".." }
winit = "0.30"
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
mimalloc = "0.1"
opener = "0.8"
rfd = { version = "0.15", default-features = false, features = [
    "xdg-portal",
    "tokio",
] }
steamlocate = "2.0"

[lints]
workspace = true

[package.metadata.packager]
product_name = "Uniscan"
category = "DeveloperTool"
icons = ["32x32.png"]

[package.metadata.packager.appimage]
files = { "libTypeTreeGeneratorAPI.so" = "usr/bin/libTypeTreeGeneratorAPI.so" }
